tests/spec/emit/snapshots/interop_array_of_pointer_options_bridges_go_field_round_trip.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/arrays"
  
  fn main() {
    let values: Array<Option<int>, 2> = [Some(1), None]
    let container = arrays.Container { Values: values }
    let roundtrip = container.Values
    let _ = roundtrip
  }
---
package main

import (
	"example.com/arrays"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	values := [2]lisette.Option[int]{lisette.MakeOptionSome(1), lisette.MakeOptionNone[int]()}
	var unwrapped [2]*int
	for i, v := range values {
		if v.Tag == lisette.OptionSome {
			unwrapped[i] = &v.SomeVal
		} else {
			unwrapped[i] = nil
		}
	}
	container := arrays.Container{Values: unwrapped}
	raw := container.Values
	var wrapped [2]lisette.Option[int]
	for i_1, v_1 := range raw {
		if v_1 != nil {
			wrapped[i_1] = lisette.MakeOptionSome[int](*v_1)
		} else {
			wrapped[i_1] = lisette.MakeOptionNone[int]()
		}
	}
}
