tests/spec/emit/snapshots/interop_array_return.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:crypto/sha256"
  
  fn main() {
    let data = "hi" as Slice<byte>
    let hash = sha256.Sum256(data)
    let _ = hash
  }
---
package main

import "crypto/sha256"

func main() {
	data := ([]byte)("hi")
	hash := sha256.Sum256(data)
	_ = hash
}
