tests/spec/emit/snapshots/interop_array_return_call_arg.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:crypto/sha256"
  
  fn apply(f: fn(Slice<uint8>) -> Slice<uint8>, data: Slice<uint8>) -> Slice<uint8> {
    f(data)
  }
  
  fn main() {
    let data: Slice<uint8> = []
    let out = apply(sha256.Sum256, data)
    let _ = out
  }
---
package main

import "crypto/sha256"

func apply(f func([]uint8) []uint8, data []uint8) []uint8 {
	return f(data)
}

func main() {
	data := ([]uint8)(nil)
	out := apply(func(arg0 []byte) []byte {
		arr_1 := sha256.Sum256(arg0)
		return arr_1[:]
	}, data)
	_ = out
}
