tests/spec/emit/snapshots/interop_array_return_defer.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:crypto/sha256"
  
  fn main() {
    let data: Slice<uint8> = [1, 2, 3]
    defer sha256.Sum256(data)
    let _ = 0
  }
---
package main

import "crypto/sha256"

func main() {
	data := []uint8{1, 2, 3}
	defer sha256.Sum256(data)
}
