tests/spec/emit/snapshots/interop_array_return_direct_call.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:crypto/sha256"
  
  fn main() {
    let data = "hello" as Slice<uint8>
    let hash = sha256.Sum256(data)
    let _ = hash
  }
---
package main

import "crypto/sha256"

func main() {
	data := []uint8("hello")
	arr_1 := sha256.Sum256(data)
	hash := arr_1[:]
	_ = hash
}
