tests/spec/emit/snapshots/interop_array_return_explicit_return.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:crypto/sha256"
  
  fn get() -> fn(Slice<uint8>) -> Slice<uint8> {
    return sha256.Sum256
  }
  
  fn main() {
    let f = get()
    let data: Slice<uint8> = []
    let out = f(data)
    let _ = out
  }
---
package main

import "crypto/sha256"

func get() func([]uint8) []uint8 {
	return func(arg0 []byte) []byte {
		arr_1 := sha256.Sum256(arg0)
		return arr_1[:]
	}
}

func main() {
	f := get()
	data := ([]uint8)(nil)
	out := f(data)
	_ = out
}
