tests/spec/emit/snapshots/interop_array_return_if_assignment.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:crypto/sha256"
  
  fn main() {
    let f: fn(Slice<uint8>) -> Slice<uint8> = if true {
      sha256.Sum256
    } else {
      sha256.Sum224
    }
    let data: Slice<uint8> = []
    let out = f(data)
    let _ = out
  }
---
package main

import "crypto/sha256"

func main() {
	var f func([]uint8) []uint8
	if true {
		f = func(arg0 []byte) []byte {
			arr_1 := sha256.Sum256(arg0)
			return arr_1[:]
		}
	} else {
		f = func(arg0 []byte) []byte {
			arr_2 := sha256.Sum224(arg0)
			return arr_2[:]
		}
	}
	data := ([]uint8)(nil)
	out := f(data)
	_ = out
}
