tests/spec/emit/snapshots/interop_array_return_let_call.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:crypto/sha256"
  
  fn main() {
    let f = sha256.Sum256
    let data = "hello" as Slice<uint8>
    let hash = f(data)
    let _ = hash
  }
---
package main

import "crypto/sha256"

func main() {
	f := func(arg0 []byte) []byte {
		arr_1 := sha256.Sum256(arg0)
		return arr_1[:]
	}
	data := []uint8("hello")
	hash := f(data)
	_ = hash
}
