tests/spec/emit/snapshots/interop_array_return_parenthesized_call.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:crypto/sha256"
  
  fn main() {
    let data: Slice<uint8> = []
    let out = (sha256.Sum256)(data)
    let out2 = out.append(1)
    let _ = out2
  }
---
package main

import "crypto/sha256"

func main() {
	data := ([]uint8)(nil)
	arr_1 := sha256.Sum256(data)
	out := arr_1[:]
	out2 := append(out, 1)
	_ = out2
}
