tests/spec/emit/snapshots/interop_array_return_statement_position.snap
---
source: tests/spec/emit/interop_matrix.rs
description: "input: \nimport \"go:crypto/sha256\"\n\nfn main() {\n  let data: Slice<uint8> = [1, 2, 3]\n  sha256.Sum256(data)\n  let _ = 0\n}\n"
---
package main

import "crypto/sha256"

func main() {
	data := []uint8{1, 2, 3}
	sha256.Sum256(data)
}
